# napi-py

./: README.md  mypy.ini  pyproject.toml
napi/: api.py  encoding.py  read_7z.py
