[tool.poetry]
name = "napi-py"
version = "1.3.0"
description = "CLI tool for downloading subtitles from napiprojekt.pl"
authors = ["emkor93 <emkor93@gmail.com>"]
license = "GPL-3.0 License"
readme = "README.md"
homepage = "https://github.com/emkor/napi-py"
repository = "https://github.com/emkor/napi-py"
keywords = ["napiprojekt", "subs", "subtitles", "movie", "film"]
packages = [{ include = "napi" }]

[tool.poetry.dependencies]
python = "^3.10"
py7zr = "^1.1.0"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
pytest = "^7.4.4"
black = "^24.0.0"

[tool.poetry.scripts]
napi-py = 'napi.main:cli_main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
